--- a/Csharp/controle/controle/controle.csproj
+++ b/Csharp/controle/controle/controle.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="buscaRequisicoes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="buscaRequisicoes.Designer.cs">
+      <DependentUpon>buscaRequisicoes.cs</DependentUpon>
+    </Compile>
     <Compile Include="CrystalReport1.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -104,6 +110,9 @@
     <Compile Include="Requisicao.Designer.cs">
       <DependentUpon>Requisicao.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="buscaRequisicoes.resx">
+      <DependentUpon>buscaRequisicoes.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CrystalReport1.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CrystalReport1.cs</LastGenOutput>
@@ -171,6 +180,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="imgs\btnBusca.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
